[gd_scene load_steps=9 format=2]

[ext_resource path="res://PriceCalculation/GraphsControl.gd" type="Script" id=1]
[ext_resource path="res://PriceCalculation/NewOptionAcceptDialog.gd" type="Script" id=3]
[ext_resource path="res://PriceCalculation/NewCompComboAcceptDialog.gd" type="Script" id=4]
[ext_resource path="res://PriceCalculation/NewSupComboAcceptDialog.gd" type="Script" id=5]
[ext_resource path="res://PriceCalculation/SatisfactionModelEditor.gd" type="Script" id=6]
[ext_resource path="res://PriceCalculation/NewOptionOfCompComboAcceptDialog.gd" type="Script" id=7]
[ext_resource path="res://PriceCalculation/NewOptionOfSupComboAcceptDialog.gd" type="Script" id=8]
[ext_resource path="res://Plotter/Plotter.tscn" type="PackedScene" id=9]

[node name="SatisfactionModelEditor" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsItemList" type="ItemList" parent="."]
margin_left = 328.0
margin_top = 8.0
margin_right = 511.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteOption" type="Button" parent="."]
margin_left = 280.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 32.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddOption" type="Button" parent="."]
margin_left = 280.0
margin_top = 40.0
margin_right = 320.0
margin_bottom = 72.0
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompCombosItemList" type="ItemList" parent="."]
margin_left = 320.0
margin_top = 88.0
margin_right = 504.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteCompCombo" type="Button" parent="."]
margin_left = 280.0
margin_top = 88.0
margin_right = 312.0
margin_bottom = 112.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteSupCombo" type="Button" parent="."]
margin_left = 280.0
margin_top = 144.0
margin_right = 312.0
margin_bottom = 168.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddCompCombo" type="Button" parent="."]
margin_left = 280.0
margin_top = 112.0
margin_right = 317.0
margin_bottom = 136.0
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddSupCombo" type="Button" parent="."]
margin_left = 280.0
margin_top = 168.0
margin_right = 317.0
margin_bottom = 192.0
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsOfCompComboItemList" type="ItemList" parent="."]
margin_left = 568.0
margin_top = 88.0
margin_right = 760.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteOptionOfCompCombo" type="Button" parent="."]
margin_left = 528.0
margin_top = 88.0
margin_right = 560.0
margin_bottom = 112.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteOptionOfSupCombo" type="Button" parent="."]
margin_left = 528.0
margin_top = 144.0
margin_right = 560.0
margin_bottom = 168.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddOptionOfCompCombo" type="Button" parent="."]
margin_left = 528.0
margin_top = 112.0
margin_right = 565.0
margin_bottom = 136.0
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddOptionOfSupCombo" type="Button" parent="."]
margin_left = 528.0
margin_top = 168.0
margin_right = 565.0
margin_bottom = 192.0
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SupCombosItemList" type="ItemList" parent="."]
margin_left = 320.0
margin_top = 144.0
margin_right = 504.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsOfSupComboItemList" type="ItemList" parent="."]
margin_left = 568.0
margin_top = 144.0
margin_right = 760.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightOfOptionOfSupComboSpinBox" type="SpinBox" parent="."]
margin_left = 824.0
margin_top = 152.0
margin_right = 898.0
margin_bottom = 176.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SatisfCurvesForOptions" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.196078 )
margin_left = 288.0
margin_top = 192.0
margin_right = 576.0
margin_bottom = 264.0

[node name="SatisfCurvesItemList" type="ItemList" parent="SatisfCurvesForOptions"]
margin_left = 32.0
margin_top = 6.0
margin_right = 216.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxSatisfSpinBox" type="SpinBox" parent="SatisfCurvesForOptions"]
margin_left = 224.0
margin_top = 6.0
margin_right = 298.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrefAt0SpinBox" type="SpinBox" parent="SatisfCurvesForOptions"]
margin_left = 224.0
margin_top = 38.0
margin_right = 298.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SatisfCurvesForCompCombos" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.196078 )
margin_left = 288.0
margin_top = 272.0
margin_right = 576.0
margin_bottom = 344.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SatisfCurvesForCompCombosItemList" type="ItemList" parent="SatisfCurvesForCompCombos"]
margin_left = 32.0
margin_top = 6.0
margin_right = 216.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxSatisfForCompCombosSpinBox" type="SpinBox" parent="SatisfCurvesForCompCombos"]
margin_left = 224.0
margin_top = 6.0
margin_right = 298.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrefAt0ForCompCombosSpinBox" type="SpinBox" parent="SatisfCurvesForCompCombos"]
margin_left = 224.0
margin_top = 40.0
margin_right = 298.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SatisfCurvesForSupCombos" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.196078 )
margin_left = 288.0
margin_top = 352.0
margin_right = 576.0
margin_bottom = 424.0

[node name="SatisfCurvesForSupCombosItemList" type="ItemList" parent="SatisfCurvesForSupCombos"]
margin_left = 32.0
margin_top = 6.0
margin_right = 216.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxSatisfForSupCombosSpinBox" type="SpinBox" parent="SatisfCurvesForSupCombos"]
margin_left = 224.0
margin_top = 6.0
margin_right = 298.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrefAt0ForSupCombosSpinBox" type="SpinBox" parent="SatisfCurvesForSupCombos"]
margin_left = 224.0
margin_top = 38.0
margin_right = 298.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plotter" parent="." instance=ExtResource( 9 )]
margin_bottom = 368.0

[node name="XMaxSpinBox" type="SpinBox" parent="Plotter"]
margin_left = 200.0
margin_top = 288.0
margin_right = 274.0
margin_bottom = 312.0
min_value = 5.0
max_value = 200.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YMaxSpinBox" type="SpinBox" parent="Plotter"]
margin_right = 74.0
margin_bottom = 24.0
min_value = 10.0
max_value = 200.0
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphsControl" type="Control" parent="Plotter"]
margin_top = 312.0
margin_right = 264.0
margin_bottom = 368.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButton" type="Button" parent="Plotter/GraphsControl"]
margin_left = 216.0
margin_top = 32.0
margin_right = 260.0
margin_bottom = 52.0
text = "Clear"

[node name="GraphsItemList" type="ItemList" parent="Plotter/GraphsControl"]
margin_top = 16.0
margin_right = 216.0
margin_bottom = 56.0

[node name="NewOptionAcceptDialog" type="AcceptDialog" parent="."]
margin_left = 144.0
margin_top = 24.0
margin_right = 280.0
margin_bottom = 104.0
window_title = "New option"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewOptionLineEdit" type="LineEdit" parent="NewOptionAcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 44.0

[node name="NewCompComboAcceptDialog" type="AcceptDialog" parent="."]
margin_left = 56.0
margin_top = 136.0
margin_right = 285.0
margin_bottom = 216.0
window_title = "New complementary combo"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCompComboLineEdit" type="LineEdit" parent="NewCompComboAcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 221.0
margin_bottom = 44.0

[node name="NewSupComboAcceptDialog" type="AcceptDialog" parent="."]
margin_left = 56.0
margin_top = 200.0
margin_right = 285.0
margin_bottom = 280.0
window_title = "New supplementary combo"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewSupComboLineEdit" type="LineEdit" parent="NewSupComboAcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 221.0
margin_bottom = 44.0

[node name="NewOptionOfCompComboAcceptDialog" type="AcceptDialog" parent="."]
margin_left = 248.0
margin_top = 136.0
margin_right = 522.0
margin_bottom = 216.0
window_title = "New complementary combo option"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewOptionOfCompComboLineEdit" type="LineEdit" parent="NewOptionOfCompComboAcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 266.0
margin_bottom = 44.0

[node name="NewOptionOfSupComboAcceptDialog" type="AcceptDialog" parent="."]
margin_left = 248.0
margin_top = 200.0
margin_right = 522.0
margin_bottom = 280.0
window_title = "New supplementary combo option"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewOptionOfSupComboLineEdit" type="LineEdit" parent="NewOptionOfSupComboAcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 266.0
margin_bottom = 44.0

[node name="SaveButton" type="Button" parent="."]
margin_left = 648.0
margin_top = 296.0
margin_right = 712.0
margin_bottom = 320.0
text = "Save"

[node name="LoadFileDialog" type="FileDialog" parent="."]
margin_left = 320.0
margin_top = 392.0
margin_right = 640.0
margin_bottom = 584.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Abrir un Archivo"
mode = 0
access = 1
filters = PoolStringArray( "*.save" )
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="."]
margin_left = 648.0
margin_top = 328.0
margin_right = 712.0
margin_bottom = 352.0
text = "Load"

[node name="SaveAsButton" type="Button" parent="."]
margin_left = 728.0
margin_top = 296.0
margin_right = 792.0
margin_bottom = 320.0
text = "Save as"

[node name="SaveAsFileDialog" type="FileDialog" parent="."]
margin_left = 280.0
margin_top = 312.0
margin_right = 728.0
margin_bottom = 480.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Guardar un Archivo"
access = 1
filters = PoolStringArray( "*.save" )
current_dir = "user://"
current_file = "satisf_calc_param_default.save"
current_path = "user://satisf_calc_param_default.save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameOfModelLabel" type="Label" parent="."]
margin_left = 552.0
margin_top = 24.0
margin_right = 592.0
margin_bottom = 38.0
text = "Name of Model"
[connection signal="item_selected" from="OptionsItemList" to="." method="_on_OptionsItemList_item_selected"]
[connection signal="nothing_selected" from="OptionsItemList" to="." method="_on_OptionsItemList_nothing_selected"]
[connection signal="pressed" from="DeleteOption" to="." method="_on_DeleteOption_pressed"]
[connection signal="pressed" from="AddOption" to="." method="_on_AddOption_pressed"]
[connection signal="item_selected" from="CompCombosItemList" to="." method="_on_CompCombosItemList_item_selected"]
[connection signal="pressed" from="DeleteCompCombo" to="." method="_on_DeleteCompCombo_pressed"]
[connection signal="pressed" from="DeleteSupCombo" to="." method="_on_DeleteSupCombo_pressed"]
[connection signal="pressed" from="AddCompCombo" to="." method="_on_AddCompCombo_pressed"]
[connection signal="pressed" from="AddSupCombo" to="." method="_on_AddSupCombo_pressed"]
[connection signal="pressed" from="DeleteOptionOfCompCombo" to="." method="_on_DeleteOptionOfCompCombo_pressed"]
[connection signal="pressed" from="DeleteOptionOfSupCombo" to="." method="_on_DeleteOptionOfSupCombo_pressed"]
[connection signal="pressed" from="AddOptionOfCompCombo" to="." method="_on_AddOptionOfCompCombo_pressed"]
[connection signal="pressed" from="AddOptionOfSupCombo" to="." method="_on_AddOptionOfSupCombo_pressed"]
[connection signal="item_selected" from="SupCombosItemList" to="." method="_on_SupCombosItemList_item_selected"]
[connection signal="item_selected" from="OptionsOfSupComboItemList" to="." method="_on_OptionsOfSupComboItemList_item_selected"]
[connection signal="value_changed" from="WeightOfOptionOfSupComboSpinBox" to="." method="_on_WeightOfOptionOfSupComboSpinBox_value_changed"]
[connection signal="item_activated" from="SatisfCurvesForOptions/SatisfCurvesItemList" to="." method="_on_SatisfCurvesItemList_item_activated"]
[connection signal="item_selected" from="SatisfCurvesForOptions/SatisfCurvesItemList" to="." method="_on_SatisfCurvesItemList_item_selected"]
[connection signal="value_changed" from="SatisfCurvesForOptions/MaxSatisfSpinBox" to="." method="_on_MaxSatisfSpinBox_value_changed"]
[connection signal="value_changed" from="SatisfCurvesForOptions/PrefAt0SpinBox" to="." method="_on_PrefAt0SpinBox_value_changed"]
[connection signal="item_activated" from="SatisfCurvesForCompCombos/SatisfCurvesForCompCombosItemList" to="." method="_on_SatisfCurvesForCompCombosItemList_item_activated"]
[connection signal="item_selected" from="SatisfCurvesForCompCombos/SatisfCurvesForCompCombosItemList" to="." method="_on_SatisfCurvesForCompCombosItemList_item_selected"]
[connection signal="value_changed" from="SatisfCurvesForCompCombos/MaxSatisfForCompCombosSpinBox" to="." method="_on_MaxSatisfForCompCombosSpinBox_value_changed"]
[connection signal="value_changed" from="SatisfCurvesForCompCombos/PrefAt0ForCompCombosSpinBox" to="." method="_on_PrefAt0ForCompCombosSpinBox_value_changed"]
[connection signal="item_activated" from="SatisfCurvesForSupCombos/SatisfCurvesForSupCombosItemList" to="." method="_on_SatisfCurvesForSupCombosItemList_item_activated"]
[connection signal="item_selected" from="SatisfCurvesForSupCombos/SatisfCurvesForSupCombosItemList" to="." method="_on_SatisfCurvesForSupCombosItemList_item_selected"]
[connection signal="value_changed" from="SatisfCurvesForSupCombos/MaxSatisfForSupCombosSpinBox" to="." method="_on_MaxSatisfForSupCombosSpinBox_value_changed"]
[connection signal="value_changed" from="SatisfCurvesForSupCombos/PrefAt0ForSupCombosSpinBox" to="." method="_on_PrefAt0ForSupCombosSpinBox_value_changed"]
[connection signal="value_changed" from="Plotter/XMaxSpinBox" to="." method="_on_XMaxSpinBox_value_changed"]
[connection signal="value_changed" from="Plotter/YMaxSpinBox" to="." method="_on_YMaxSpinBox_value_changed"]
[connection signal="pressed" from="Plotter/GraphsControl/ClearButton" to="Plotter/GraphsControl" method="_on_ClearButton_pressed"]
[connection signal="item_selected" from="Plotter/GraphsControl/GraphsItemList" to="Plotter/GraphsControl" method="_on_GraphsItemList_item_selected"]
[connection signal="confirmed" from="NewOptionAcceptDialog" to="NewOptionAcceptDialog" method="_on_NewOptionAcceptDialog_confirmed"]
[connection signal="ok_pressed" from="NewOptionAcceptDialog" to="." method="_on_NewOptionAcceptDialog_ok_pressed"]
[connection signal="visibility_changed" from="NewOptionAcceptDialog" to="NewOptionAcceptDialog" method="_on_NewOptionWindowDialog_visibility_changed"]
[connection signal="confirmed" from="NewCompComboAcceptDialog" to="NewCompComboAcceptDialog" method="_on_NewCompComboAcceptDialog_confirmed"]
[connection signal="ok_pressed" from="NewCompComboAcceptDialog" to="." method="_on_NewCompComboAcceptDialog_ok_pressed"]
[connection signal="visibility_changed" from="NewCompComboAcceptDialog" to="NewCompComboAcceptDialog" method="_on_NewCompComboAcceptDialog_visibility_changed"]
[connection signal="confirmed" from="NewSupComboAcceptDialog" to="NewSupComboAcceptDialog" method="_on_NewSupComboAcceptDialog_confirmed"]
[connection signal="ok_pressed" from="NewSupComboAcceptDialog" to="." method="_on_NewSupComboAcceptDialog_ok_pressed"]
[connection signal="visibility_changed" from="NewSupComboAcceptDialog" to="NewSupComboAcceptDialog" method="_on_NewSupComboAcceptDialog_visibility_changed"]
[connection signal="confirmed" from="NewOptionOfCompComboAcceptDialog" to="NewOptionOfCompComboAcceptDialog" method="_on_NewOptionOfCompComboAcceptDialog_confirmed"]
[connection signal="ok_pressed" from="NewOptionOfCompComboAcceptDialog" to="." method="_on_NewOptionOfCompComboAcceptDialog_ok_pressed"]
[connection signal="visibility_changed" from="NewOptionOfCompComboAcceptDialog" to="NewOptionOfCompComboAcceptDialog" method="_on_NewOptionOfCompComboAcceptDialog_visibility_changed"]
[connection signal="confirmed" from="NewOptionOfSupComboAcceptDialog" to="NewOptionOfSupComboAcceptDialog" method="_on_NewOptionOfSupComboAcceptDialog_confirmed"]
[connection signal="ok_pressed" from="NewOptionOfSupComboAcceptDialog" to="." method="_on_NewOptionOfSupComboAcceptDialog_ok_pressed"]
[connection signal="visibility_changed" from="NewOptionOfSupComboAcceptDialog" to="NewOptionOfSupComboAcceptDialog" method="_on_NewOptionOfSupComboAcceptDialog_visibility_changed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="file_selected" from="LoadFileDialog" to="." method="_on_LoadFileDialog_file_selected"]
[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="SaveAsButton" to="." method="_on_SaveAsButton_pressed"]
[connection signal="file_selected" from="SaveAsFileDialog" to="." method="_on_SaveAsFileDialog_file_selected"]
